Widen homepage box to avoid wrapping

--- a/css/default.scss
+++ b/css/default.scss
@@ -213,7 +213,7 @@ tr:hover {
 
 #home-page {
   #home-container {
-    width: 260px;
+    width: 285px;
     margin: 108px auto 0 auto;
     overflow: hidden;
   }
